--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
     "react-use": "^17.6.0"
